# store-assistant

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
openspec/changes/add-store-assistant-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-store-assistant-agent/specs/store-assistant-agent/: spec.md
src/store_assistant/: __init__.py  app.py  config.py  controller.py  db.py  llm.py  models.py  normalization.py  phone.py  ui.py
tests/: test_config.py  test_controller.py  test_live_openai.py  test_ui.py
